# vscode-dev-template

./: .gitignore  .gitmodules  CMakeLists.txt  CmakePresets.json  README.md  pkg-config.cmake.in
cli/: README.md  globals.ps1
cli/windows/: config.ps1  vars.ps1
cli/windows/MSVS/: build.ps1  config.ps1  run.ps1  vars.ps1
cli/windows/MinGW/: build.ps1  config.ps1  run.ps1  vars.ps1
cli/windows/Ninja/: build.ps1  config.ps1  run.ps1
cli/windows/emsdk/: build.ps1  config.ps1  run.ps1  vars.ps1
cmake/: Helpers.cmake  README.md
modules/: CMakeLists.txt  README.md
modules/python/: CMakeLists.txt
modules/vtk/: CMakeLists.txt  CmakePresets.json
src/: CMakeLists.txt  main.cxx  mainwindow.hxx
tools/: CMakeLists.txt  README.md
tools/electron/: CMakeLists.txt
tools/emsdk/: CMakeLists.txt
tools/git/: CMakeLists.txt
tools/mingw64/: CMakeLists.txt
tools/node/: CMakeLists.txt
tools/powershell/: CMakeLists.txt
tools/python/: CMakeLists.txt
ui/: CMakeLists.txt  main.js  package.json  preload.js
ui/layout/: CMakeLists.txt  asdf  index.html
ui/layout/css/: style.css
ui/layout/html/: footer.html  head.html  header.html  links.html  main.html  navbar.html  scripts.html  single.html  templates.html
ui/layout/js/: actions.js  helpers.js  single.js
ui/layout/json/: navbar.json
ui/mainwindow/: CMakeLists.txt  main.cxx  mainwindow.cxx  mainwindow.hxx
ui/viewport/: CMakeLists.txt
ui/viewport/css/: viewport.css
ui/viewport/html/: viewport.html
ui/viewport/js/: viewport.js
ui/viewport/src/: CMakeLists.txt  viewport-fd.hxx  viewport.cxx  viewport.hxx
